# elbm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  figure_5.tsv
include/: 1_bit_vs_1_bit.hpp  1_bit_vs_1_bit_kernels.hpp  1_bit_vs_2_bits_kernels.hpp  2_bit_vs_2_bits_kernels.hpp  for_python_interface.hpp  utils.hpp
notebooks/: 2bitsPacked.ipynb  Figure5.ipynb  NewPlot.ipynb  bin_vs_dnnl.ipynb
notebooks/.ipynb_checkpoints/: 2bitsPacked-checkpoint.ipynb  bin_vs_dnnl-checkpoint.ipynb
scripts/: figure_5.sh  tabl  table_4.sh
src/: example_for_python.cpp  perf_1_bit_vs_1_bit.cpp  perf_1_bit_vs_2_bits.cpp  perf_2_bit_vs_2_bits.cpp  perf_blis.cpp  perf_fbgemm.cpp  perf_onednn.cpp
